[tool.poetry]
name = "reinforcement-learning-gym-envs"
version = "0.1.0"
description = ""
authors = ["Vaibhav Vaidya <vaibhavvinayak08@gmail.com>"]

packages = [
    { include = "gym_recorder" },
]

[tool.poetry.dependencies]
python = "~3.11" # For now we use 3.11, but in case we use newer versions of python this should be updated
numpy = "^1.21.0"
ipykernel = "^6.25.1"
plotly = "^5.17.0"
nbformat = "^5.9.2"
openpyxl = "^3.1.2"
tabulate = "^0.9.0"
watermark = "^2.4.0"
ipytest = "^0.13.3"
pandas = "^2.2.1"
kaleido = "0.2.1"
opencv-python = "^4.9.0.80"
scikit-learn = "^1.4.1.post1"
gymnasium = {extras = ["box2d"], version = "^0.29.1"}

[tool.poetry.group.dev.dependencies]
black = "^22.3.0"
isort = "^5.10.1"
flake8 = "^4.0.1"

[tool.isort]
profile = "black"
line_length = 120
known_first_party = []

[tool.black]
line-length = 120
preview = true
target-version = ['py311']

[tool.autoflake]
in-place = true
remove-unused-variables = true
remove-all-unused-imports = true
exclude = ['test_*.py', '__init__.py']


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
